[gd_scene load_steps=4 format=3 uid="uid://cw3a454b2ejl8"]

[ext_resource type="Script" path="res://models/currents/current_point.gd" id="1_2d4lu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kkcd7"]
radius = 30.0

[sub_resource type="CircleShape2D" id="CircleShape2D_g3w6a"]
radius = 30.0

[node name="CurrentPoint" type="Node2D"]
script = ExtResource("1_2d4lu")

[node name="GravityDetector" type="Area2D" parent="."]
gravity_space_override = 1
gravity_point = true
gravity_point_center = Vector2(0, 0)
gravity_direction = Vector2(0, 0)
gravity = -200.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GravityDetector"]
shape = SubResource("CircleShape2D_kkcd7")

[node name="ForceEmitter" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ForceEmitter"]
shape = SubResource("CircleShape2D_g3w6a")

[connection signal="body_entered" from="ForceEmitter" to="." method="_on_force_emitter_body_entered"]
